Misc Updates in the files